[package]
name = "rut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10"
flate2 = "1.0"
walkdir = "2"
derive_builder = "0.12"
clap = { version = "4.1.11", features = ["derive"] }

[dev-dependencies]
rut_testhelpers = { path = "libs/rut_testhelpers" }

[[bin]]
name = "rut"
